Fixed Navbar alignment and Hero text1

--- a/src/components/Logo/logo.module.css
+++ b/src/components/Logo/logo.module.css
@@ -1,6 +1,9 @@
 .logo {
-  width: 67px; /* Figma spec */
-  height: 34px; /* Figma spec */
+  
   display: flex;
   align-items: center;
+  top: 20px;
+  left: 32px;
+  width: 67px; /* Figma spec */
+  height: 34px; /* Figma spec */
 }
